# portfolio-website-v2

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  tailwind.config.js
src/: app.rs  main.rs  routed.rs
src/components/: home.rs  mod.rs
src/components/navigation/: top_nav.rs
src/components/other/: gallery.rs  misc.rs  mod.rs  modal.rs  video.rs
src/data/: gallery_element.rs  mod.rs
src/hooks/: mod.rs  nav_context.rs
static/: input.css  tailwind.css
