[package]
name = "portfolio-website-v2"
version = "1.0.0"
edition = "2021"
description = "Portfolio Website focused on PowerPoint Presentations"
readme = "README.md"
repository = "https://github.com/mtricolici98/portfolio-website-v2"
license = "MIT"
keywords = ["portfolio", "power-point"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dark-light = "1.0.0"
yew = { version="0.20", features=["csr"] }
yew-router = "0.17"
yew-hooks = "0.2.0"
js-sys = "0.3"
wasm-bindgen = "0.2"
gloo = "0.8.0"
gloo-console = "0.2.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]
